src/test/assign/assign_immutable.stderr
error: cannot assign twice to immutable variable `a`
 --> src/test/assign/assign_immutable.sq:6:5
  |
5 |     let a: i32 = 5;
6 |     a = a + a * 2; //~ error: cannot assign twice to immutable variable
  |     ^^^^^^^^^^^^^ cannot assign twice to immutable variable