src/test/assign/assign_immutable.sq
// ignore

// Test assign a new value to immutable variable.

fn main() {
    let a: i32 = 5;
    a = a + a * 2; //~ error: cannot assign twice to immutable variable
}
